<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_profile">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_18sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/booked_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/qwik_care" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:src="@drawable/tick" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.QuickTrip.Text.Large"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/your_appointment_is" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.QuickTrip.Text.Heading"
                    android:textStyle="bold"
                    android:text="@string/txt_booked" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.QuickTrip.Text.Large"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_ok"
            android:textColor="@color/white" />
    </LinearLayout>

</layout>