<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.qwiktrips.user.app.ui.login.LoginViewModel" />

        <variable
            name="viewHandler"
            type="com.qwiktrips.user.app.utils.helper.ViewItemClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/images" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_above="@id/ll_login"
            android:src="@drawable/qwik_care" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/bg_login"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.QuickTrip.Text.Subtitle"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:letterSpacing=".1"
                android:text="@string/quickcare"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.QuickTrip.Text.Small"
                android:layout_margin="@dimen/_5sdp"
                android:letterSpacing=".01"
                android:text="@string/msg_browse_profiles"
                android:textStyle="bold" />

            <include
                android:id="@+id/include_email"
                layout="@layout/layout_login"
                app:type="@{0}" />

            <include
                android:id="@+id/include_password"
                layout="@layout/layout_login"
                app:type="@{1}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary_color"
                    android:checked="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="start"
                    android:text="@string/remember_me" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.QuickTrip.Text.Small"
                    android:layout_width="wrap_content"
                    android:text="@string/forget_password" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/bg_btn_yellow"
                android:onClick="@{viewHandler::onItemClicked}"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:textStyle="bold"
                android:text="@string/login"
                android:textAllCaps="false" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_or_connect_with"
            style="@style/Widget.QuickTrip.Text"
            android:layout_below="@id/ll_login"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/or_connect_with" />


        <LinearLayout
            android:id="@+id/ll_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_or_connect_with"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_google_login"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_white_circle"
                android:padding="@dimen/_13sdp"
                app:srcCompat="@drawable/google" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_facebook_login"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/bg_white_circle"
                android:padding="@dimen/_13sdp"
                app:srcCompat="@drawable/facebook" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.QuickTrip.Text"
            android:layout_below="@id/ll_social"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="Don't Have Account? Sign Up" />


    </RelativeLayout>

</layout>