<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewHandler"
            type="com.qwiktrips.user.app.utils.helper.ViewItemClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:minWidth="@dimen/_200sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:minWidth="@dimen/_200sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.QuickTrip.Text.Title.Black.Bold"
                    android:text="@string/text_delete_request"
                    android:textSize="@dimen/_15sdp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.QuickTrip.Text"
                    android:layout_margin="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/msg_appointment_delete" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:weightSum="2"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_3sdp"
                        app:cardBackgroundColor="@color/primary_color"
                        app:cardCornerRadius="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_yes"
                            style="@style/Widget.QuickTrip.Text.Title.Black.Bold"
                            android:layout_height="match_parent"
                            android:onClick="@{viewHandler::onItemClicked}"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingTop="@dimen/_6sdp"
                            android:paddingEnd="@dimen/_20sdp"
                            android:paddingBottom="@dimen/_6sdp"
                            android:text="@string/text_yes" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        app:cardBackgroundColor="@color/dark_gray"
                        app:cardCornerRadius="@dimen/_10sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_no"
                            style="@style/Widget.QuickTrip.Text.Title.Black.Bold"
                            android:onClick="@{viewHandler::onItemClicked}"
                            android:paddingStart="@dimen/_30sdp"
                            android:paddingTop="@dimen/_6sdp"
                            android:paddingEnd="@dimen/_30sdp"
                            android:paddingBottom="@dimen/_6sdp"
                            android:text="@string/text_no" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>