<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewHandler"
            type="com.qwiktrips.user.app.utils.helper.ViewItemClickHandler" />

        <variable
            name="viewModel"
            type="com.qwiktrips.user.app.ui.hairstylist.select.SelectHairStyleViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.QuickTrip.Text.Large.Black.Bold"
                android:text="@string/appointment_confirmed" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_booked_image" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.QuickTrip.Text.Title"
                android:text="That's it!"
                android:textColor="@color/light_black" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Widget.QuickTrip.Text.Title"
                android:text="@string/msg_appointment_booked"
                android:textColor="@color/light_black"/>

            <RelativeLayout
                android:id="@+id/rl_get_your_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_btn_yellow"
                android:onClick="@{viewHandler::onItemClicked}"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/get_your_receipt"
                    style="@style/Widget.QuickTrip.Text.Black.Bold"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/get_your_receipt" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_13sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_30sdp"
                    app:srcCompat="@drawable/ic_next" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>